main-service 7